# Abstimmungsbons

./: .gitignore  CLAUDE.md  LICENSE  README.md  generate_test_data.py  generate_vouchers.py  main.py  pyproject.toml
data/: test_data.xlsx
docs/: index.html
utils/: config.py
