[project]
name = "lzag-abstimmung"
version = "0.1.0"
description = "Generator for voting vouchers with multiple barcode types (Code128, Code39, DataMatrix, QR)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "reportlab>=4.2.0",
]

[tool.uv]
dev-dependencies = []
